Sun Oct 17 23:03:48 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk/timer.rb: TkTimer#start and restart accept a block

Sun Oct 17 12:53:46 2004  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (fole_func_methods): correct argument mismatch.
	* ext/win32ole/win32ole.c (fole_get_methods): ditto.
	* ext/win32ole/win32ole.c (fole_put_methods): ditto.
	* ext/win32ole/tests/testWIN32OLE.rb: add test for WIN32OLE#ole_func_methods
	  WIN32OLE#ole_get_methods, WIN32OLE#ole_put_methods

Sat Oct 16 14:45:28 2004  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/0.9.rb (RSS::Rss#to_s): removed garbage.

Sat Oct 16 13:42:49 2004  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/: untabified.
	* test/rss/: untabified.
	* lib/rss/0.9.rb (RSS::Rss#to_s): inent -> indent.

Sat Oct 16 13:34:56 2004  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss: supported prety print.
	* test/rss/test_1.0.rb: added test for calculating default indent size.

Sat Oct 16 10:56:36 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (create_makefile): install-rb is needed for statically
	  linked extensions.  [ruby-dev:24491]

Fri Oct 15 18:07:08 2004  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* ext/openssl/ossl_x509store.c
	  (ossl_x509stctx_initialize): setup OpenSSL::X509::StoreContext with
	  ossl_x509stctx_* functions instead of X509_STORE_CTX_*.
	  (ossl_x509store_set_time): add OpenSSL::X509::Store#time=.
	  (ossl_x509stctx_set_time): add OpenSSL::X509::StoreContext#time=.

	* test/openssl/ossl_x509store.rb: test certificate validity times.

Fri Oct 15 18:04:35 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk/timer.rb: TkTimer.new(interval, loop){ ... } is
	  acceptable. Add TkTimer.start ( == new + start ).

Fri Oct 15 12:43:09 2004  Tanaka Akira  <akr@m17n.org>

	* eval.c (Init_stack): make prototype declaration consistent with
	  the definition in gc.c.

Thu Oct 14 13:33:59 2004  Kouhei Sutou  <kou@cozmixng.org>
